# dataset-tag-editor-standalone

./: .gitattributes  .gitignore  DOCUMENTATION.md  Documentation.md  README.md  example_lib.py  install.bat  launch_user.bat  processor_return_check.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: memo_template.md  todo_list.md
config/: models.toml  taggers.toml
docs/: tagger-wrapper-lib-TODO.md
lib/scorer/: wrapper.py
lib/tagger/: __init__.py  wrapper.py
scorer-wrapper-lib/: example.py  pyproject.toml
scorer-wrapper-lib/config/: models.toml
scorer-wrapper-lib/docs/: Documentation_Scorer_Wrapper.md  RooCode.md  pytest-bdd.md  スコアラー.md  ロガー.md
scorer-wrapper-lib/src/scorer_wrapper_lib/: __init__.py  scorer.py  scorer_registry.py
scorer-wrapper-lib/src/scorer_wrapper_lib/core/: base.py  model_factory.py  utils.py
scorer-wrapper-lib/src/scorer_wrapper_lib/exceptions/: model_errors.py
scorer-wrapper-lib/src/scorer_wrapper_lib/score_models/: aesthetic_shadow.py  cafe_aesthetic.py  clipaesthetic.py  imagereward.py
scorer-wrapper-lib/tests/: conftest.py  scorer_registry_steps.py  scorer_steps.py  test_cache_handling.py  test_image_scoring.py  test_init_lib.py
scorer-wrapper-lib/tests/core/: test_utils.py
scorer-wrapper-lib/tests/exceptions/: test_error_handling.py  test_model_errors.py
scorer-wrapper-lib/tests/features/: cache_handling.feature  error_handling.feature  init_lib.feature  scorer_registry.feature
scorer-wrapper-lib/tests/features/core/: base.feature  utils.feature
scorer-wrapper-lib/tests/features/exceptions/: error_handling.feature
scorer-wrapper-lib/tests/features/integration/: cache_handling.feature  image_scoring.feature  init_lib.feature
scorer-wrapper-lib/tests/features/score_models/: imagereward.feature
scorer-wrapper-lib/tests/features/steps/: scorer_steps.py
scorer-wrapper-lib/tests/integration/: test_cache_handling.py  test_image_scoring.py  test_init_lib.py  test_scorer_integration.py  test_scorer_registry_integration.py
scorer-wrapper-lib/tests/integration/features/: cache_handling.feature  image_scoring.feature  init_lib.feature
scorer-wrapper-lib/tests/score_models/: test_aesthetic_score_models.py  test_imagereward.py
scripts/: cmd_args.py  interface.py  launch.py  settings.py  tab_main.py  tagger.py
scripts/dataset_tag_editor/: dte_logic.py  interrigator_names.py
scripts/dataset_tag_editor/interrogators/: git_large_captioning.py
scripts/ui/: block_load_dataset.py  block_tag_select.py  tab_edit_caption_of_selected_image.py
tagger-wrapper-lib/: README.md  example.py  pyproject.toml
tagger-wrapper-lib/src/tagger_wrapper_lib/: __init__.py  registry.py  tagger.py
tagger-wrapper-lib/src/tagger_wrapper_lib/core/: base.py  model_factory.py  utils.py
tagger-wrapper-lib/src/tagger_wrapper_lib/exceptions/: model_errors.py
tagger-wrapper-lib/src/tagger_wrapper_lib/tagger_models/: BLIP_tagger.py  wd_tagger.py
tests/: conftest.py
tests/features/: image_scoring.feature  scorer.feature  scorer_registry.feature  tagger.feature
tests/features/core/: model_factory.feature  utils.feature
tests/features/score_models/: aesthetic_score_models.feature
tests/integration/: conftest.py  devices_test.py  test_cache_handling.py  test_init_lib.py  test_registry_integration.py  test_scorer_integration.py  test_scorer_pipeline.py  test_scorer_registry_integration.py  test_tagger_integration.py  test_tagger_pipeline.py  test_utils_integration.py
tests/integration/features/: scorer.feature
tests/integration/userscripts/: test_integration_improved_aesthetic_predictor.py
tests/step_defs/: test_scorer.py  test_scorer_registry.py
tests/step_defs/core/: test_utils.py
tests/step_defs/exceptions/: test_error_handling.py
tests/step_defs/score_models/: test_aesthetic_score_models.py
tests/unit/lib/: test_scorer_wrapper.py  test_tagger_wrapper.py
tests/unit/scripts/: test_launch.py
tests/unit/scripts/dataset_tag_editor/: test_taggers_builtin.py
tests/unit/userscripts/: test_aesthetic_shadow.py  test_aesthetic_shadow_v1.py  test_cafeai_aesthetic_classifier.py  test_improved_aesthetic_predictor.py  test_waifu_aesthetic_classifier.py
userscripts/taggers/: aesthetic_shadow.py  aesthetic_shadow_v1.py  cafeai_aesthetic_classifier.py  improved_aesthetic_predictor.py  waifu_aesthetic_classifier.py
